--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -364,7 +364,7 @@ h6,
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   line-height: 1.1; 
-  color: lightseagreen;
+  color: black;
 }
 h1 small,
 h2 small, 
